--- a/web/src/index.css
+++ b/web/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.logo {
+  color: #fff;
+  background-color: #0f86dc;
+  font-size: 24px;
+  line-height: 40px;
+  font-weight: bold;
+  text-align: center;
+}
